--- a/data/main-window.ui
+++ b/data/main-window.ui
@@ -1,7 +1,5 @@
 <?xml version="1.0"?>
 <interface>
-  <requires lib="gtk+" version="2.16"/>
-  <!-- interface-naming-policy toplevel-contextual -->
   <object class="GtkWindow" id="main_window">
     <property name="width_request">230</property>
     <property name="height_request">320</property>
@@ -109,8 +107,8 @@
                         <property name="use_underline">True</property>
                         <property name="image">image10</property>
                         <property name="use_stock">False</property>
-                        <accelerator key="Return" signal="activate" modifiers="GDK_SHIFT_MASK"/>
                         <accelerator key="d" signal="activate" modifiers="GDK_CONTROL_MASK"/>
+                        <accelerator key="Return" signal="activate" modifiers="GDK_SHIFT_MASK"/>
                       </object>
                     </child>
                     <child>
@@ -560,7 +558,7 @@
                         <child>
                           <object class="GtkImage" id="user_block_image">
                             <property name="visible">True</property>
-                            <property name="stock">gtk-delete</property>
+                            <property name="stock">gtk-stop</property>
                           </object>
                         </child>
                       </object>
