get2gnow 0.0.0.eCa9: Improved support for GTK radio menu w/o needing to upgrade GTK or libsoup
I was upset by get2gnow's apparent need to have GTK+2.0 >= 2.16 installed for the radio menu to work correctly.  This morning I was struck with an instant flash of inspiration on how I could possibly work around this.  :-) Well I was right & now get2gnow will work with GTK+2.0 - 2.12 & libsoup-2.4 - 2.24.3.  Please enjoy...please give it a try.

Now I need to sleep & than back to work on Laconica & OAuth support.  I'll have identi.ca, at least, supported come morning and my next commit.  Well...that is where the muse is leading me now, I'll be following my inspiration & motivation...as always & right now I'm highly, hyper, & uber motivated to add support for Identi.ca & for OAuth.  I really want to Indenti.ca, or any Laconica instance, so it more usabel for more user.  I want to impliment OAuth so I tweets can be signed as being from 'get2gnow...yeah I really like its new name.

Committed on: 2009-04-17 @ 05:38:16 PM

--- a/data/popup-dialog.ui
+++ b/data/popup-dialog.ui
@@ -55,7 +55,7 @@
             <property name="layout_style">end</property>
             <child>
               <object class="GtkButton" id="button1">
-                <property name="label">gtk-cancel</property>
+                <property name="label">gtk-close</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="can_default">True</property>
