get2gnow 0.0.eC.aDD - OAuth support implemented - further support for multiple account, 70% complete, & many bug fixes.
I have made major progress on adding support for identi.ca, ie laconica, and and micro-blogging service that uses a 'Twitter-Compatible-~api~'.  I would have finished it with this commit but I've had to focus on implement OAuth.  Because let's face it if I don't do it now I'd never do it & get2gnow would've ended up locked out of Twitter.  At least that was my fear, and so I spent 1/2 of my day trying to 'bug-fix' my bug-free OAuth code, until finally finding hidden away on Twitter's dev talk google group a lil notice about OAuth being disabled.  Could they have at least put that in OAuth response codes?  Well yes & no, they could & should have, but its not supported by the spec which is the most worthless & overly complicated spec for any thing imaginable.  For example it requires parameter sorting.  An 'open' spec designed to close of access from data.  Its an oximoron & just further's my belief in how lil the web2.0 ~gurus~ understand the idea of openness.

Now more ranting I don't us Twitter because of its well thought out archicture I use it to connect with wonderful people who fill my life, at least as much as any online connection can, which for me is all I have & much more than I've had many times before.

There's a lot of of bug fixes & partial new features in this commit.  They're not complete but of what is, its a sneak peak at things to come.  Assuming web services don't try to lock down their data any more.  When even 'open-micro-blogging' isn't 'open' its a sad, sad day.

Along with the sneak peak at things to come there are a lot of bug-fixes & over all improvements that all make this a more than worth while commit & def worth 'checking-out'.  My bug-fixes alone are worth it.

Again I beg for feedback, catch me on Twitter, send my a message on GitHub, comment on my site, or again drop send me an email...yeah I switched to evolution, 

--- a/data/accounts-dialog.ui
+++ b/data/accounts-dialog.ui
@@ -16,7 +16,7 @@
           <object class="GtkTable" id="account_table">
             <property name="visible">True</property>
             <property name="border_width">6</property>
-            <property name="n_rows">4</property>
+            <property name="n_rows">5</property>
             <property name="n_columns">2</property>
             <property name="column_spacing">12</property>
             <property name="row_spacing">12</property>
@@ -52,8 +52,7 @@
             <child>
               <object class="GtkLabel" id="password_label">
                 <property name="visible">True</property>
-                <property name="xalign">0</property>
-                <property name="label" translatable="yes">_Password:</property>
+                <property name="label" translatable="yes">_Password:	</property>
                 <property name="use_underline">True</property>
                 <property name="mnemonic_widget">password_entry</property>
               </object>
@@ -67,8 +66,7 @@
             <child>
               <object class="GtkLabel" id="username_label">
                 <property name="visible">True</property>
-                <property name="xalign">0</property>
-                <property name="label" translatable="yes">_Username:</property>
+                <property name="label" translatable="yes">_Username:	</property>
                 <property name="use_underline">True</property>
                 <property name="mnemonic_widget">username_entry</property>
               </object>
@@ -104,6 +102,7 @@
                 <property name="mnemonic_widget">services</property>
               </object>
               <packing>
+                <property name="x_options"></property>
                 <property name="y_options"></property>
               </packing>
             </child>
@@ -111,11 +110,27 @@
               <object class="GtkComboBoxEntry" id="services">
                 <property name="visible">True</property>
                 <property name="model">services_list</property>
+                <property name="text_column">0</property>
               </object>
               <packing>
                 <property name="left_attach">1</property>
                 <property name="right_attach">2</property>
                 <property name="y_options"></property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkCheckButton" id="autoconnect_checkbutton">
+                <property name="label" translatable="yes">Connect _automatically</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">False</property>
+                <property name="use_underline">True</property>
+                <property name="draw_indicator">True</property>
+              </object>
+              <packing>
+                <property name="right_attach">2</property>
+                <property name="top_attach">4</property>
+                <property name="bottom_attach">5</property>
               </packing>
             </child>
           </object>
@@ -157,6 +172,20 @@
                 <property name="position">1</property>
               </packing>
             </child>
+            <child>
+              <object class="GtkButton" id="apply_button">
+                <property name="label" translatable="yes">gtk-apply</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+                <property name="use_stock">True</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
+                <property name="position">2</property>
+              </packing>
+            </child>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -169,6 +198,7 @@
     <action-widgets>
       <action-widget response="-6">cancelbutton1</action-widget>
       <action-widget response="-5">okbutton1</action-widget>
+      <action-widget response="0">apply_button</action-widget>
     </action-widgets>
   </object>
   <object class="GtkListStore" id="services_list">
